20XX-XX-XX   2.9.1:
-------------------


2023-12-17   2.9.0:
-------------------
  * deprecate support for Python 2 - Python 2.7 support will be removed
    in bitarray version 3.0,
    see [roadmap](https://github.com/ilanschnell/bitarray#roadmap)
  * `bitarray(n)` for integer initializer `n` will always return a bitarray
    of length `n` with all items initialized to `0`, see #212
  * allow sub-bitarray in `.count()`, #212
  * add `util.ones()`
  * `.find()` and `.index()`: add keyword argument `right` for rightmost index
  * `.itersearch()`: add start and stop argument, and keyword
    argument `right` (for descending order - starting with rightmost match)
  * deprecate `util.rindex()` (will be removed in 3.0 release),
    use `.index(..., right=True)` instead
  * deprecate `util.make_endian()` (will be removed in 3.0 release),
    use `bitarray(..., endian=...)` instead


2023-12-09   2.8.5:
-------------------
  * speedup unaligned copies by always using word shifts (in combination
    with builtin byte swap 64 when available) when bit-endianness and
    machine byte-order are opposite
  * add `HAVE_BUILTIN_BSWAP64` to header
  * avoid misaligned pointers when casting to `(uint64_t *)`
  * add tests


2023-12-04   2.8.4:
-------------------
  * simplify `copy_n()` (remove special cases), see #d2d6fd53
  * add [word shift example C program](../examples/shift_r8.c),
    and simplify `shift_r8()`
  * improve documentation and testing
  * add [roadmap](https://github.com/ilanschnell/bitarray#roadmap)


2023-11-11   2.8.3:
-------------------
  * ensure readonly attribute is set correctly when creating new objects,
    see #211
  * optimize sparse bitarray compression for raw block type
  * improve hash functions in Bloom filter example


2023-10-03   2.8.2:
-------------------
  * update cibuildwheel to 2.16.1 in order to provide cp312 wheels on PyPI
  * improve error messages for masked assignment
  * simplify test collection